# erwartung

./: .gitignore  README.md  pyproject.toml  zensical.toml
.github/workflows/: documentation.yml
docs/: categories.md  index.md  unit-tests.md
docs/exporters/: index.md
docs/integrations/: graph-data.md  index.md  more.md  python.md  relational-data.md
docs/validations/: ACDCConverter.md  ACLineSegment.md  AccumulatorLimit.md  AccumulatorValue.md  ActivePowerLimit.md  ApparentPowerLimit.md  AsynchronousMachineTimeConstantReactance.md  BaseVoltage.md  BatteryUnit.md  Clamp.md  Conductor.md  ControlArea.md  CsConverter.md  CurrentLimit.md  Cut.md  DCConductingEquipment.md  DCLineSegment.md  DiagramObjectPoint.md  DiscExcContIEEEDEC1A.md  DiscExcContIEEEDEC2A.md  DiscExcContIEEEDEC3A.md  EnergyConsumer.md  EnergySource.md  EquivalentInjection.md  ExcAC1A.md  ExcAC2A.md  ExcAC3A.md  ExcAC4A.md  ExcAC5A.md  ExcAC6A.md  ExcAC8B.md  ExcANS.md  ExcAVR1.md  ExcAVR2.md  ExcAVR3.md  ExcAVR4.md  ExcAVR5.md  ExcAVR7.md  ExcBBC.md  ExcCZ.md  (+144 more)
schema/: TC57CIM-reduced.yml
scripts/: gen-validation-markdown.py  parse-shacl-to-linkml.py
src/erwartung/: __init__.py
src/erwartung/scripts/: README.md  gen_validation_markdown.py  parse_shacl_to_linkml.py  utils.py
src/erwartung/scripts/shacl/: 61968-13_GeographicalLocation-AP-Con-Complex-SHACL_v3-0-0.ttl  61970-301_DiagramLayout-AP-Con-Complex-NotSolvedMAS-SHACL_v3-0-0.ttl  61970-301_DiagramLayout-AP-Con-Complex-SHACL_v3-0-0.ttl  61970-301_Equipment-AP-Con-Complex-NotSolvedMAS-SHACL_v3-0-0.ttl  61970-301_Equipment-AP-Con-Complex-SHACL_v3-0-0.ttl  61970-301_EquipmentBoundary-AP-Con-Complex-NotSolvedMAS-SHACL_v3-0-0.ttl  61970-301_EquipmentBoundary-AP-Con-Complex-SHACL_v3-0-0.ttl  (+67 more)
tests/data/: tower.xml  tower.yml
